--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -22,3 +22,7 @@
   background: #EEF8FF;
 
 }
+
+.height-700 {
+  height: 700px;
+}
